--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     
     <body>
-        <h1>Rana Jay  Hareshbhai<\h1>
+        <h1>Rana Jay  Hareshbhai</h1>
         <pre>
               Hello friends ! I am Jay from surat . 
         </pre>
